# unet-diffusion-model

./: .gitignore  README.md  data_viz.ipynb  main.py  pyproject.toml
.github/workflows/: ci.yml
src/unet_diffusion_model/: noiser.py
src/unet_diffusion_model/data/: dataloader.py
src/unet_diffusion_model/models/: decoder.py  encoder.py  unet.py
tests/: test_noiser.py  test_unet.py
