[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "unet-diffusion-model"
version = "0.1.0"
description = "Building a diffusion model using UNet"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib",
    "numpy",
    "pillow",
    "torch",
    "torchvision",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]
